// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/visualizations/EditVisualization.vue renders the page for an invalid visualization 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline mb-5"><span>visualization.no_data</span></h3>
        <!---->
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for barchart renders 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub tag="div">
        <!---->
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for barchart renders with progress 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline mb-5"><span>visualization.progressing</span></h3>
        <v-progress-linear-stub color="#F37F21" value="74" active="true" backgroundcolor="#FBBF35" backgroundopacity="0.5" buffervalue="100" height="25" rounded="true"><strong class="white--text">visualization.progress</strong></v-progress-linear-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for barchart renders without data 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline mb-5"><span>visualization.no_data</span></h3>
        <!---->
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for barchart renders without progress 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub tag="div">
        <!---->
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for network renders 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub tag="div">
        <network-stub visualization="[object Object]"></network-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for network renders with progress 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline mb-5"><span>visualization.progressing</span></h3>
        <v-progress-linear-stub color="#F37F21" value="74" active="true" backgroundcolor="#FBBF35" backgroundopacity="0.5" buffervalue="100" height="25" rounded="true"><strong class="white--text">visualization.progress</strong></v-progress-linear-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for network renders without data 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline mb-5"><span>visualization.no_data</span></h3>
        <!---->
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for network renders without progress 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub tag="div">
        <network-stub visualization="[object Object]"></network-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for wordcloud renders 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub tag="div">
        <wordcloud-stub visualization="[object Object]"></wordcloud-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for wordcloud renders with progress 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline mb-5"><span>visualization.progressing</span></h3>
        <v-progress-linear-stub color="#F37F21" value="74" active="true" backgroundcolor="#FBBF35" backgroundopacity="0.5" buffervalue="100" height="25" rounded="true"><strong class="white--text">visualization.progress</strong></v-progress-linear-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for wordcloud renders without data 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline mb-5"><span>visualization.no_data</span></h3>
        <!---->
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page for wordcloud renders without progress 1`] = `
<div class="visualization-view">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <v-col-stub tag="div" class="d-flex align-center justify-space-between">
        <h1 class="display-1 mt-5">visualization.title</h1>
        <v-spacer-stub></v-spacer-stub>
        <v-btn-stub tag="button" activeclass="" to="[object Object]" type="button">
          <v-icon-stub>mdi-pencil</v-icon-stub>
          visualization.edit_button
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub tag="div">
        <wordcloud-stub visualization="[object Object]"></wordcloud-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page if no visualization exists 1`] = `
<div class="visualization-view">
  <!---->
</div>
`;
